--- a/Models/SpeechLM/2024.01.09_MAGNeT.md
+++ b/Models/SpeechLM/2024.01.09_MAGNeT.md
@@ -37,14 +37,14 @@ The proposed approach is comparable to the evaluated baselines, while being sign
 Through ablation studies and analysis, we shed light on the importance of each of the components comprising ***MAGNeT***, together with pointing to the trade-offs between autoregressive and non-autoregressive modeling, considering latency, throughput, and generation quality.
 Samples are available on [our demo page](https://pages.cs.huji.ac.il/adiyoss-lab/MAGNeT).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
