--- a/Models/SpeechLM/2024.01.14_ELLA-V.md
+++ b/Models/SpeechLM/2024.01.14_ELLA-V.md
@@ -35,7 +35,7 @@ The experimental findings reveal that our model outperforms VALL-E in terms of a
 The code of ***ELLA-V*** will be open-sourced after cleanups2.
 Audio samples are available at https://ereboas.github.io/ELLAV/.
 
-## 1.Introduction·引言
+## 1·Introduction·引言
 
 Recently, deep generative AI has achieved remarkable results in various tasks, leading to the emergence of many transformative real-world applications (Brown et al., 2020; Ramesh et al., 2022; Ho et al., 2020; Rombach et al., 2022; Borsos et al., 2023; Kim et al., 2021; Chiang et al., 2019).
 With the advancement of generative models, there have been rapid developments in the field of speech synthesis as well.
@@ -91,7 +91,7 @@ Notably, ELLA-V works well on a wide spectrum of decoding strategies – even gr
 We further conducted ablation experiments to investigate the effects of our proposed modifications.
 The results indicate that the global advance in ELLA-V significantly improves the model’s performance, while the local advance enhances the stability of the generated output.
 
-## 2.Related Work·相关工作
+## 2·Related Work·相关工作
 
 ### Language Modeling·语言建模
 
@@ -119,9 +119,9 @@ Later, end-to-end neural TTS models were introduced, which synthesize Mel spectr
 Some methods, utilizing techniques such as
 VAE (Hsu et al., 2019; Lee et al., 2022), flow (Miao et al., 2020; Kim et al., 2020), diffusion (Jeong et al., 2021; Kim et al., 2022; Popov et al., 2021), and others (Wu and Shi, 2022), have achieved promising performance in end-to-end speech synthesis.On the other hand, models like VALL-E (Wang et al., 2023a) and AudioLM (Borsos et al., 2023) utilize autoregressive Transformers to model discrete audio tokens, achieving great in-context learning performance.When it comes to zero-shot speech synthesis, autoregressive Transformer-based models can predict and generate audio without the need for an additional duration model, which strikes a favorable balance between efficiency and performance, and has been garnering increasing attention.
 
-## 3.Method·方法
+## 3·Method·方法
 
-### 3.1.Overview·概览
+### 3.1·Overview·概览
 
 Fig.01 demonstrates the overall architecture of ELLA-V.
 ELLA-V primarily follows a two-stage framework similar to VALL-E, considering zero-shot TTS as a conditional codec language modeling task.
@@ -143,7 +143,7 @@ Notably, MFA not only serves as a text tokenizer but also extracts alignment rel
 The forced alignment information is essential for
 ELLA-V to change sequence order.In Section 3.2, we will provide a detailed explanation of how this information is used to construct the target sequence.
 
-### 3.2.Training: Codec Language Model·训练：编解码语言模型
+### 3.2·Training: Codec Language Model·训练：编解码语言模型
 
 ELLA-V employs a Generalized Autoregressive
 Codec language model for the prediction of the first quantization layer in the EnCodec, which corresponds to capturing semantic information and coarse-grained acoustic profiles.
@@ -198,7 +198,7 @@ In other words, as shown in Fig.02, we only compute loss when the token to be pr
 During inference, whenever the model predicts an EOP for a phoneme, the next phoneme token is directly appended to the end of the sequence, which will be further discussed in
 Section 4.
 
-#### 3.2.2.Non-Autoregressive (NAR) Codec Language Model·非自回归编解码语言模型
+#### 3.2.2·Non-Autoregressive (NAR) Codec Language Model·非自回归编解码语言模型
 
 In the second stage, the NAR language model is employed to predict the codes from the second to the last quantization layers in parallel.
 The input-output sequence construction of the NAR model follows the same pattern as used in the GAR model discussed in Section 3.2.1.
@@ -213,7 +213,7 @@ Intuitively, both the GAR and
 NAR model of ELLA-V compute the loss on the acoustic tokens of the target sequence, and GAR additionally computes loss for EOP and EOS.
 
 
-### 3.3.Inference·推理
+### 3.3·Inference·推理
 
 ELLA-V can use a short clip of speech from an unseen speaker as an acoustic prompt to synthesize speech for a specified text prompt.
 Fig.03 illustrates the inference process of the GAR model.
@@ -221,7 +221,7 @@ While VALL-E may get stuck in an infinite loop during inference, resulting in th
 Following an EOP , we can directly append the next phoneme token to the end of the generated sequence, ensuring the proper generation of speech without abnormal pauses or repetitions.
 For the GAR model, we employ a sampling-based decoding strategy, whereas for the NAR model, we use a greedy decoding approach to strike a balance between efficiency and performance.
 
-### 3.4.Local Advance·局部进步
+### 3.4·Local Advance·局部进步
 
 One intuition is that the pronunciation of a phoneme is strongly related to the pronunciation of the phonemes just before and after it.
 However, due to the autoregressive nature of the GAR model, an acoustic token cannot attend to the following phoneme tokens, even though we can leverage the transformer’s ability to model long-term dependencies through global advance to provide complete context for the acoustic token generation.
@@ -229,9 +229,9 @@ To further harness the powerful capability of the transformer in modeling local 
 Specifically, we move the phoneme token and the EOP token ahead by a few frames, referred to as local advance.
 
 
-## 4.Experiment·实验
+## 4·Experiment·实验
 
-### 4.1.Experi-mental Setup·实验设置
+### 4.1·Experi-mental Setup·实验设置
 
 #### Data & Tasks·数据与任务
 
@@ -297,7 +297,7 @@ The comparative mean option score (CMOS) and the similarity mean option score (S
 SMOS was rated on a 1 to 5 scale, in 0.5point increments, to gauge speaker similarity, while
 CMOS, ranging from -1 to 1, assessed the overall naturalness and quality of the synthesized speech against the baseline.
 
-### 4.2.Results·结果
+### 4.2·Results·结果
 
 #### Zero-Shot TTS Continuation Task·零样本TTS续写任务
 
@@ -344,7 +344,7 @@ ELLA-V-no global configuration), the SPK and
 WER of the synthesized audio were comparable to those of VALL-E.
 These findings indicate the importance of both local and global information in achieving more accurate synthesized audios, meanwhile, combining both of them potentially leads to further enhancements in accuracy.
 
-## 5.Conclusion·结论
+## 5·Conclusion·结论
 
 In this paper, we introduce ELLA-V, a simple and efficient two-stage zero-shot TTS framework based on language modeling.
 By learning interleaved sequences of acoustic and text tokens, our proposed
