--- a/Models/SpeechLM/2023.06.03_SpeechGen.md
+++ b/Models/SpeechLM/2023.06.03_SpeechGen.md
@@ -31,14 +31,14 @@ In this paper, we present pioneering research that explores the application of p
 The proposed unified framework holds great promise for efficiency and effectiveness, particularly with the imminent arrival of advanced speech LMs, which will significantly enhance the capabilities of the framework.
 The code and demos of ***SpeechGen*** will be available on the project website: [this https URL](https://ga642381.github.io/SpeechPrompt/speechgen).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
