--- a/Models/SpeechLM/2023.06.06_Mega-TTS.md
+++ b/Models/SpeechLM/2023.06.06_Mega-TTS.md
@@ -42,7 +42,7 @@ We scale ***Mega-TTS*** to multi-domain datasets with 20K hours of speech and ev
 Experimental results demonstrate that ***Mega-TTS*** surpasses state-of-the-art TTS systems on zero-shot TTS, speech editing, and cross-lingual TTS tasks, with superior naturalness, robustness, and speaker similarity due to the proper inductive bias of each module.
 Audio samples are available at https://mega-tts.github.io/demo-page.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
 Text-to-speech (TTS) synthesis [53, 2, 49, 35, 48, 45, 29, 66, 43, 28] aims to generate human-like speech from text and has gained significant attention in the field of machine learning.
 Traditional TTS systems [13, 11, 60, 8, 21] are usually trained on limited datasets, which impairs their models’ ability to produce diverse and generalizable results.
@@ -80,7 +80,7 @@ It is worth noting that existing large-scale TTS systems [58, 50] are typically 
 - We evaluate ***Mega-TTS*** on 3 down-stream speech generation tasks (i.e., zero-shot TTS, speech editing, and cross-lingual TTS), demonstrating that ***Mega-TTS*** can be applied to various speech generation tasks.
 We also propose a novel sampling strategy for speech editing via the discrete prosody tokens extracted by ***Mega-TTS***.
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
 In this section, we briefly overview the background of this work, including zero-shot text-to-speech (TTS) and generative models for speech synthesis.
 
@@ -107,7 +107,7 @@ Recently, speech generation systems like AudioLM [4] and VALL-E [58] propose to 
 Although good reconstruction quality can be achieved by neural audio codec models, they ignore the intrinsic nature of speech [14] and may not be suitable to serve as the generator of intermediate representation for speech generation.
 The encoded latent contains the phase, content, and timbre attributes and language models are not suitable for predicting these due to the error propagation problem.
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
 <details>
 <summary>原文</summary>
@@ -135,7 +135,7 @@ We describe these designs and the training and inference procedures in detail in
 最后, 为了展示我们的模型能够应用于各种场景, 我们为下游任务设计了推理策略.
 我们将在后续小节中详细描述这些设计和训练推理过程.
 
-### 3.1.Disentangling Speech into Different Components: 将语音解耦成不同成分
+### 3.1·Disentangling Speech into Different Components: 将语音解耦成不同成分
 
 <details>
 <summary>原文</summary>
@@ -248,7 +248,7 @@ $$
 - $Loss_{VQ}$: VQVAE 损失函数;
 - $Loss_{Adv}$: LSGAN 风格的对抗损失, 其目标是最小化预测梅尔频谱和真实梅尔频谱之间的分布距离.
 
-### 3.2.P-LLM
+### 3.2·P-LLM
 
 <details>
 <summary>原文</summary>
@@ -349,7 +349,7 @@ $$
 由于韵律序列 $u$ 是音素级的, 我们直接将其与 $H_{content}$, $H'_{content}$, 和 $H'_{timbre}$ 连接作为输入.
 P-LLM 在训练阶段通过交叉熵损失进行教师强迫训练.
 
-### 3.3.Speech Prompting for Inference: 用于推理的语音提示
+### 3.3·Speech Prompting for Inference: 用于推理的语音提示
 
 <details>
 <summary>原文</summary>
@@ -431,11 +431,11 @@ $u_t^i$ 是第 i 个候选路径中的韵律编码.
 $u^{gt}_t$ 是目标韵律编码.
 由于我们的解码策略考虑了掩码区域的左右边界, 编辑区域可以实现平滑过渡.
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
 In this section, we present the evaluation results of ***Mega-TTS*** and the comparison with baselines in terms of the objective and subjective metrics.
 
-### 4.1.Experimental setup
+### 4.1·Experimental setup
 
 #### Training datasets.
 We use GigaSpeech [9] and WenetSpeech [65] as the training corpora, which contains 20k hours of multi-domain speeches in English and Chinese in total.
@@ -487,7 +487,7 @@ We also analyze the CMOS in terms of audio quality and speech prosody.
 We tell the tester to focus on one corresponding aspect and ignore the other aspect when scoring.
 We put more information about the subjective evaluation in Appendix A.2.
 
-### 4.2.Results of zero-shot synthesis
+### 4.2·Results of zero-shot synthesis
 
 We compare the zero-shot synthesis performance of ***Mega-TTS*** with baseline systems, including:
 1)YourTTS [8], a powerful zero-shot TTS model trained on 1k hours of speech dataset.
@@ -501,7 +501,7 @@ Besides, as shown in Table 3, ***Mega-TTS*** outperforms VALL-E in all metrics.
 It can be seen that ***Mega-TTS*** is able to generate more natural speeches than VALL-E, demonstrating the effectiveness of introducing intrinsic inductive biases.
 To further investigate the performance of disentanglement, we also visualize the distribution of the timbre and prosody representations in Appendix C.
 
-### 4.3.Results of zero-shot speech editing
+### 4.3·Results of zero-shot speech editing
 
 We compare the quality of generated audio samples of our ***Mega-TTS*** with SOTA speech editing baselines, including 1) EditSpeech [52]; 2) A3T [3].
 Since the text content of the generated speech has been edited in the speech editing evaluation, the ground truth is missing.
@@ -512,7 +512,7 @@ We evaluate the audio quality, speech prosody, and speaker similarity for each a
 The results are presented Table 4.
 It can be seen that ***Mega-TTS*** achieves the highest perceptual quality, prosody, and speaker similarity score, which demonstrates the effectiveness of our proposed speech prompting mechanism for speech editing and the powerful in-context learning capability of ***Mega-TTS***.
 
-### 4.4.Results of zero-shot cross-lingual TTS
+### 4.4·Results of zero-shot cross-lingual TTS
 
 To compare ***Mega-TTS*** with the zero-shot cross-lingual TTS models VALL-E X [67], we directly download the utterances from the VALL-E X demo page, which consists of 6 speech pairs from LibriSpeech, EMIME, and AISHELL-3.
 Since YourTTS [8] is built only for English TTS, we evaluate the performance of English TTS with Chinese samples as prompts.
@@ -521,7 +521,7 @@ It can be seen that ***Mega-TTS*** surpasses VALL-E X in terms of audio quality,
 For objective evaluations, we use all of the text samples in the LibriSpeech test-clean set as the target sentences and randomly select one audio from AISHELL-3 as the speech prompt for each target sentence.
 The results show that ***Mega-TTS*** achieves a significantly lower WER than YourTTS, demonstrating the effectiveness of our method.
 
-### 4.5.Results of robustness evaluation
+### 4.5·Results of robustness evaluation
 
 To further evaluate the robustness of the proposed model, we adopt the 50 particularly hard sentences following FastSpeech [48].
 As shown in Table 6, Tacotron [59] and VALL-E [58] show poor robustness on these complicated sentences.
@@ -529,7 +529,7 @@ As a comparison, our ***Mega-TTS*** shows equivalent robustness to the non-autor
 It can be seen that directly modeling the discrete speech tokens with LLMs like VALL-E [58] would cause robustness issues.
 As a comparison, ***Mega-TTS*** not only leverages the in-context learning capability of LLMs, but also maintains good robustness by introducing the proper inductive bias to each speech component.
 
-## 5.Conclusions: 结论
+## 5·Conclusions: 结论
 
 In this paper, we proposed ***Mega-TTS***, which aims to introduce proper inductive biases into large-scale zero-shot TTS systems.
 We disentangle speech into different attributes (i.e., content, timbre, prosody, and phase) and model different attributes in different ways.
@@ -543,7 +543,7 @@ Due to limited page space, we discuss the limitations and future works in Append
 <summary原文 </summary>
 
 ### A.
-#### A.2.Details in Subjective Evaluation
+#### A.2·Details in Subjective Evaluation
 
 We perform the audio quality, speech prosody, and speaker similarity evaluations on Amazon Mechanical Turk (MTurk).
 For each dataset, we randomly select 50 samples from the test set and use the TTS systems to generate the audio samples.
@@ -557,24 +557,24 @@ The screenshots of instructions for testers are shown in Figure.03.
 We paid $12 to participants hourly and totally spent about $1000 on participant compensation.
 We tell the participants that the data will be used in scientific research.
 
-#### A.3.Details of Speaker Diarization Model
+#### A.3·Details of Speaker Diarization Model
 
 To obtain the speaker information from GigaSpeech and WenetSpeech, we use a released automatic speaker diarization model called pyannote.audio12, which achieves DER=11.24% on the VoxConverse dataset and DER=14.09% on the AISHELL-4 dataset.
 We only assign the speaker ID to the audio clip when its activation score is higher than 70% and abandon other audio clips.
 We also abandon the audio clips that contain multiple speakers speaking simultaneously.
 
-#### A.4.Details of Speaker Similarity Model
+#### A.4·Details of Speaker Similarity Model
 
 To measure the speaker similarity, we use the WavLM [12] model finetuned for speaker verification from https://huggingface.co/microsoft/wavlm-base-plus-sv to extract the speaker embedding.
 Then the cosine similarity between the synthesized speech’s speaker embedding and the ground-truth speech’s speaker embedding is calculated as the speaker similarity score.
 The WavLM model is pretrained on 94,000 hours of speech data and finetuned on the VoxCeleb1 dataset using an X-Vector head with an Additive Margin Softmax loss, which achieves 0.84%, 0.928%, and 1.758% EER (Equal Error Rate) on the Vox1-O, Vox1-E, and Vox1-H trial lists.
 
-#### A.5.Details of ASR Model
+#### A.5·Details of ASR Model
 To measure the audio quality and speech intelligibility for cross-lingual TTS systems, we evaluate the word error rate (WER) metric.
 We use the finetuned HuBERT-Large model to transcribe the synthesized speech into text and calculate the WER between the transcribed text and the original target text.
 The finetuned HuBERT-Large model from https://huggingface.co/facebook/ hubert-large-ls960-ft is finetuned on 960h of Librispeech and achieves 1.5%, 3.0%, 1.9%, and 3.3% WER on the dev-clean, dev-other, test-clean, and test-other set of Librispeech.
 
-#### A.6.Error Bars and Random Seeds
+#### A.6·Error Bars and Random Seeds
 
 For the subjective evaluations, we report confidence intervals of the results of MOS tests in Table 2, Table 3, Table 4, and Table 5.
 For the objective evaluations, we ran the experiments 10 times with 10 different random seeds ([1234, 1111, 2222, 3333, 4444, 5555, 6666, 7777, 8888, 9999]) and obtained the averaged results.
