--- a/Models/SpeechLM/2023.06.08_MusicGen.md
+++ b/Models/SpeechLM/2023.06.08_MusicGen.md
@@ -34,14 +34,14 @@ We conduct extensive empirical evaluation, considering both automatic and human 
 Through ablation studies, we shed light over the importance of each of the components comprising ***MusicGen***.
 Music samples, code, and models are available at [this https URL](https://github.com/facebookresearch/audiocraft).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
