--- a/Models/SpeechLM/2023.06.22_AudioPaLM.md
+++ b/Models/SpeechLM/2023.06.22_AudioPaLM.md
@@ -55,14 +55,14 @@ We demonstrate that initializing ***AudioPaLM*** with the weights of a text-only
 The resulting model significantly outperforms existing systems for speech translation tasks and has the ability to perform zero-shot speech-to-text translation for many languages for which input/target language combinations were not seen in training.
 ***AudioPaLM*** also demonstrates features of audio language models, such as transferring a voice across languages based on a short spoken prompt. We release examples of our method at this https URL
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
