--- a/Models/SpeechLM/2023.06.23_VoiceBox.md
+++ b/Models/SpeechLM/2023.06.23_VoiceBox.md
@@ -39,14 +39,14 @@ Similar to GPT, ***Voicebox*** can perform many different tasks through in-conte
 In particular, ***Voicebox*** outperforms the state-of-the-art zero-shot TTS model VALL-E on both intelligibility (5.9% vs 1.9% word error rates) and audio similarity (0.580 vs 0.681) while being up to 20 times faster.
 Audio samples can be found in [this https URL](https://voicebox.metademolab.com/).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
