--- a/Models/SpeechLM/2023.07.14_Mega-TTS2.md
+++ b/Models/SpeechLM/2023.07.14_Mega-TTS2.md
@@ -45,7 +45,7 @@ Experimental results demonstrate that ***Mega-TTS 2*** could not only synthesize
 Furthermore, our method enables to transfer various speaking styles to the target timbre in a fine-grained and controlled manner.
 Audio samples can be found in https://boostprompt.github.io/boostprompt/.
 
-## 1.Introduction
+## 1·Introduction
 
 In recent years, there has been remarkable progress in the development of text-to-speech (TTS) technology~\citep{shen2018natural,jia2018transfer,li2019neural,kim2020glow,ren2019fastspeech,ren2020fastspeech,kim2021conditional,kim2022guided}. Among them, adaptive TTS systems~\citep{chen2021adaspeech,min2021meta,kim2022guided2}
 are capable of cloning personalized voices given a few minutes of speech data. However, the performance of these systems relies heavily on the quality and quantity of the data utilized during the fine-tuning phases~\citep{tan2021survey}. Insufficient data during the fine-tuning stages can lead to diminished audio naturalness or speech intelligibility~\citep{kang2023grad}. Moreover, the computational demands also constrain its application for cloning everyone's voice.
@@ -67,7 +67,7 @@ Experiments on LibriSpeech test-clean~\citep{panayotov2015librispeech} and ESD~\
 - Experimental results also reveal that the performance of Mega-TTS 2 surpasses the powerful fine-tuning baseline when we have 10 seconds to 5 minutes of data for each unseen speaker, indicating the superiority of our proposed prompting mechanisms.
 - The proposed prosody interpolation technique ensures the controllability of prosody and is capable of transferring various speaking styles to the desired timbre. For instance, we can transform a voice with a sad tone into a happier one with the auxiliary prosody prompt from another speaker.
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
 ### Adaptive TTS: 自适应文本转语音
 
@@ -99,11 +99,11 @@ Recent works try to transfer prosody in different-text and different-speaker set
 Among them, Daft-Exprt (Zaıdi et al., 2021) uses a gradient reversal layer to penalize the prosody encoder if its output contains information about the speaker identity from the reference utterance, which enhances the target speaker fidelity for cross-speaker prosody transfer.
 However, as pointed out by Sigurgeirsson & King (2023), current solutions do not learn a transferable representation of prosody, but rather an utterance-level representation that is relatively dependent on both the reference speaker and reference text.
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
 This section introduces Mega-TTS 2. To begin with, we provide an intuitive illustration of how Mega-TTS 2 decomposes the timbre and prosody information from speech. Next, we provide detailed explanations of our prompting mechanisms and the two-stage training process of the proposed model.
 
-### 3.1.Decomposition for Prosody and Timbre
+### 3.1·Decomposition for Prosody and Timbre
 
 #### Problem Formulation
 
@@ -119,7 +119,7 @@ Denote $Y=\{y_{1}, \cdots, y_{n}\}$ as the speech corpus for a certain speaker $
 
 First, based on the assumption, $z_t$ and $g$ can be extracted through $E_{t}(\tilde{y})$, and there is no way for $E_{t}(\tilde{y})$ to obtain the $z_p$ and $z_c$. Second, if we only feed phoneme sequence to $E_c$, $E_c$ can only pass all the content information $z_c$. Third, since the information $z_{c}$ and $z_{t}$ are available now, the prosody encoder $E_{p}$ will prioritize removing the fine-grained content and timbre information if it is forced to lose some information by information bottleneck $B(\cdot)$~\citep{qian2019autovc}. The bottleneck forces $E_{p}(y_t)$ to pass only the fine-grained prosodic style $z_{p}$ that other encoders cannot supply, hence achieving the decomposition. We provide a detailed explanation of how we ensure the validity of Equation~\ref{eq:eq_1} in Appendix~\ref{app:decomposition}. After the decomposition, we describe the detailed designs of our prompting mechanisms in the following subsections.
 
-### 3.2.Compressive Acoustic Autoencoder
+### 3.2·Compressive Acoustic Autoencoder
 
 Note that to store timbre information for thousands of speakers, we need a large number of codebook entries. However, since the prosody and timbre have been decomposed, the prosodic information $z_{p}$ can be compressed into a highly compact codebook, and the timbre information $z_{t}$ can be extracted via a powerful speaker encoder. The decomposition strategy not only allows our model to accommodate extremely long prosody prompts but also enables our model to control the prosodic styles of generated speeches. As shown in Figure~\ref{fig:arch_overview}, we design the vector quantised (VQ) encoder as $E_{p}$, the multi-reference timbre encoder as $E_{t}$, and the content encoder as $E_{c}$. Since $E_p$ mainly captures the prosodic variance information, a GAN-based mel-spectrogram decoder $D$ is adopted to model the high-frequency details in spectrograms, which ensures perceptually high-quality reconstructions. Overall, the first-stage training loss can be formulated as $\mathcal{L} = \mathcal{L}_{\mathrm{rec}} + \mathcal{L}_{\mathrm{VQ}} + \mathcal{L}_{\mathrm{Adv}}$, where $\mathcal{L}_{\mathrm{rec}}=\|y_{t}-\hat{y}_{t}\|^2$ is the reconstruction loss, $\mathcal{L}_{\mathrm{VQ}}$ is the VQ codebook loss~\citep{van2017neural}, and $\mathcal{L}_{\mathrm{Adv}}$ is the LSGAN-styled adversarial loss~\citep{mao2017least} whose objective is to minimize the distribution distance between the predicted mel-spectrograms and the ground truth mel-spectrograms. Among the proposed three encoders, the content encoder is composed of several feed-forward Transformer layers following common practice in non-autoregressive TTS systems~\citep{ren2019fastspeech}. In the following paragraphs, we describe the details of the prosody and timbre encoders, respectively.
 
@@ -146,9 +146,9 @@ p\left(\hat{\mathbf{u}} \right) = \prod_{t=0}^T \Big( (1-\gamma) \cdot p\left(\h
 \end{wrapfigure}
 where $z_{cb}$ and $z_{ca}$ are the content information from speech clips $s_b$ and $s_a$. $\hat{z}_{c}$ is the content information of the target sentence. With our prosody interpolation technique, users can freely control the prosodic style of the generated speech in the inference stage. Moreover, the proposed prosody interpolation algorithm utilizes the autoregressive probability distribution of the language model for prosody transfer. Compared with directly substituting the time-averaged prosody representation $\mathbf{u}_{b}$ with $\mathbf{u}_{a}$~\citep{karlapati2020copycat,zaidi2021daft}, the prosody latent language model is able to mix $\mathbf{u}_{a}$ and $\mathbf{u}_{b}$ in a soft and fine-grained manner in the autoregressive generation process.
 
-## 4.Experiments
+## 4·Experiments
 
-### 4.1.Experimental Setup
+### 4.1·Experimental Setup
 
 Training Datasets. We train ***Mega-TTS 2*** and all baselines on LibriLight (Kahn et al., 2020), which contains 60K hours of unlabelled speech derived from LibriVox audiobooks. The sample rate is 16KHz for all speech data. We transcribe the speech with the hybrid DNN-HMM ASR model pre-trained on 960 hours labeled LibriSpeech following VALL-E (Wang et al., 2023). We align the phoneme sequence with speech using the external alignment tool (McAuliffe et al., 2017).
 Model Configuration. We provide model configuration in Appendix A.4 and detailed hyperparameter settings in Table 5.
@@ -158,14 +158,14 @@ Objective Metrics. For zero-shot TTS, we evaluate the word error rate (WER), spe
 the test set for the objective evaluation. For prosody transfer, we evaluate the WER, SIM, duration error (DE), and the moments (standard deviation (σ), skewness (γ) and kurtosis (κ)) (Andreeva et al., 2014; Niebuhr & Skarnitzl, 2019) of the pitch distribution.
 Subjective Metrics. We conduct the MOS (mean opinion score) evaluation on the test set to measure the audio naturalness via Amazon Mechanical Turk. We keep the text content and prompt speech consistent among different models to exclude other interference factors. We randomly choose 50 samples from the test set of each dataset for the subjective evaluation, and each audio is listened to by at least 20 testers. We analyze the MOS in two aspects: QMOS (Quality, clarity, naturalness, and high-frequency details) and SMOS (Speaker similarity in terms of timbre reconstruction and prosodic pattern). We also analyze the CMOS in terms of audio quality and speaker similarity. We tell the testers to focus on one corresponding aspect and ignore the other aspect when scoring.
 
-### 4.2.Results of Zero-Shot Speech Synthesis
+### 4.2·Results of Zero-Shot Speech Synthesis
 
 In this subsection, we evaluate our model with various lengths of speech prompts and compare our model with zero-shot and fine-tuning baselines to demonstrate the effectiveness of the multi-sentence prompting mechanism. We randomly choose 20 speakers from the LibriSpeech test-clean set and randomly choose 400 seconds of speeches for each of them. We split the 400 seconds of speech into a 300-second prompt set and a 100-second target set. We keep the prompts consistent among different models to exclude other interference factors. We compare the zero-shot speech synthesis performance of ***Mega-TTS 2*** with two systems, including: 1) VALL-E (zero-shot) (Wang et al., 2023), a large-scale zero-shot TTS model using large language models to generate discrete speech codes. Since VALL-E has not been open-sourced yet, we carefully implement it for optimal performance; 2) Baseline (fine-tune), a model that incorporates the GAN used in our ***Mega-TTS 2*** to the FastSpeech 2 backbone (Ren et al., 2020). To make the baseline support adaptive scenarios, we use the powerful speaker encoder from Meta-StyleSpeech (Min et al., 2021) to extract timbre information. We carefully fine-tune the baseline system for 2,000 steps to reach an optimal balance between WER and SIM. Note that all of the systems in this experiment are pre-trained on the LibriLight dataset. We provide further explanation for the selection of the baseline systems in Appendix A.7.
 Analysis As shown in Table 1, as the amount of adaptation data increases, the performance of MegaTTS 2 continues to improve. Although the performance of VALL-E improves as the data volume increases from 3 seconds to 10 seconds, the performance significantly drops in the 20-second setting due to the single-sentence prompting mechanisms in training. Moreover, since the compression rate of the Encodec model restricts the length of prompts, VALL-E fails to generate reasonable speeches with prompts longer than 20 seconds in our experiments. From another perspective, when we have 10 seconds or 60 seconds of speeches for each speaker, our ***Mega-TTS 2*** surpasses the fine-tuning baseline in terms of speech naturalness and speaker similarity. Additionally, when we have 300
 
 seconds of speeches per speaker, ***Mega-TTS 2*** still outperforms the baseline system in terms of WER and achieves comparable performance with it in terms of speaker similarity. We also visualize the WER and SIM in the fine-tuning process and compare the baseline system with ***Mega-TTS 2*** in Figure 3. Our approach can enhance speaker similarity by utilizing more data like fine-tuning baseline, while maintaining a relatively low word error rate.
 
-### 4.3.Results of Prosody Transfer
+### 4.3·Results of Prosody Transfer
 
 In this subsection, we evaluate the prosody transfer performance of our model by transferring the emotional styles from the ESD dataset (Zhou et al., 2021) to speakers in the LibriSpeech test-clean dataset. We randomly choose 20 speakers from the LibriSpeech test-clean set and choose 50 sentences for each of them. Then, we randomly select an emotional speech clip from the ESD dataset for each of the sentences in the LibriSpeech test-clean set and use the selected emotional speech as the prosodic reference. We keep the reference speeches consistent among different models to exclude other interference factors. We compare the prosody transfer performance of ***Mega-TTS 2*** with two systems, including:
 (1) CopyCat (Karlapati et al., 2020), a model that utilizes a reference encoder architecture capable of capturing temporal prosodic representations;
@@ -176,7 +176,7 @@ To make fair comparisons, we incorporate the techniques for prosody transfer fro
 Analysis Table 2 demonstrates that compared with CopyCat and Daft-Exprt, the moments (σ, γ, and κ) of the generated speeches of Megs-TTS are closer to the ground-truth audio and the DE is lower than other methods, demonstrating the effectiveness of the proposed prosody interpolation techniques. Besides, we observe that our method can efficiently preserve the original timbre and maintain a high audio quality. We also visualize the prosody distribution before and after the prosody transfer process and compare the baseline system with ***Mega-TTS 2*** in Figure 4.
 
 
-### 4.4.Ablation Studies
+### 4.4·Ablation Studies
 
 Prosody and Timbre Prompts We evaluate different lengths of prompts for the MRTE and P-LLM separately. In Table 3, the SIM score and the speech quality increase with longer timbre prompts while the DTW distance almost remains unchanged. When we increase the length of prosody prompts, the DTW distance decreases while the speaker similarity remains at the same level. It can be seen that the proposed timbre and prosody prompting mechanisms boost the subjective speaker similarity in terms of timbre and prosody modeling separately.
 
@@ -187,7 +187,7 @@ VQ Encoder and MRTE We test the following four settings:
 
 The architecture and prompting mechanism of LDM is based on [NaturalSpeech 2](../Diffusion/2023.04.18_NaturalSpeech2.md). All baselines use 10 seconds of prompts. The results are shown in Table 4. For setting 1), it can be observed that the removal of MRTE significantly affects both the audio quality and speaker similarity. This is because the timbre information is absorbed by the VQ codebook and puts great pressure on the P-LLM, which demonstrates the effectiveness of decomposing timbre and prosody information. For setting 3), substituting the VQ encoder and P-LLM with VAE and LDM results in similar performance compared to Ours-10s. However, the performance of w/ VAE+LM is still much inferior to Ours-300s, indicating the superiority of the proposed multi-sentence prompting mechanism.
 
-## 5.Conclusions
+## 5·Conclusions
 
 In this paper, we present ***Mega-TTS 2***, a framework that boosts the prompting mechanisms for zero shot TTS systems.
 With the proposed multi-sentence prompting strategy, our approach outperforms the fine-tuning baseline when 10 seconds to 5 minutes of adaptation data is available for each speaker.
@@ -199,26 +199,26 @@ Due to space limitations, we include additional discussions in the appendix.
 
 ### A.Detailed Experimental Settings
 
-#### A.1.Details in Objective Evaluations
+#### A.1·Details in Objective Evaluations
 
 Here, we provide details of the model used in objective evaluations.
 Speaker Similarity Model To measure the speaker similarity, we use the WavLM (Chen et al., 2022) model fine-tuned for speaker verification from https://huggingface.co/microsoft/ wavlm-base-plus-sv to extract the speaker embedding. Then the cosine similarity between the synthesized speech’s speaker embedding and the ground-truth speech’s speaker embedding is calculated as the speaker similarity score. The WavLM model is pre-trained on 94,000 hours of speech data and fine-tuned on the VoxCeleb1 dataset using an X-Vector head with an Additive Margin Softmax loss, which achieves 0.84%, 0.928%, and 1.758% EER (Equal Error Rate) on the Vox1-O, Vox1-E, and Vox1-H trial lists.
 ASR Model To measure the audio quality and speech intelligibility, we evaluate the word error rate (WER) metric. We use the fine-tuned HuBERT-Large model to transcribe the synthesized speech into text and calculate the WER between the transcribed text and the original target text. The HuBERTLarge model from https://huggingface.co/facebook/hubert-large-ls960-ft is fine-tuned on 960h of Librispeech and achieves 1.5%, 3.0%, 1.9%, and 3.3% WER on the dev-clean, dev-other, test-clean, and test-other set of Librispeech.
 
-#### A.2.Details in Subjective Evaluations
+#### A.2·Details in Subjective Evaluations
 
 We perform the audio quality and speaker similarity evaluations on Amazon Mechanical Turk (MTurk). For each dataset, we randomly select 50 samples from the test set and use the TTS systems to generate the audio samples. Each audio has been listened to by at least 20 listeners. For MOS, each tester is asked to evaluate the subjective score of a sentence on a 1-5 Likert scale. For CMOS, listeners are asked to compare pairs of audio generated by systems A and B following Loizou (2011), indicating which of the two audio they prefer. For audio quality evaluation (QMOS and CMOS-Q), we tell listeners to “Please focus on the speech quality in terms of clarity, naturalness, and high-frequency details, and ignore other factors”. For speaker similarity evaluations (MOS-S), we tell listeners to “Please focus only on the similarity of the speaker to the reference one in terms of the timbre and prosodic patterns, and ignore the differences of content, grammar, audio quality, or other factors.”. We paid $15 to participants hourly and totally spent about $1200 on participant compensation. We tell the participants that the data will be used in scientific research.
 
-#### A.3.Details in Network Structure
+#### A.3·Details in Network Structure
 
 MRTE As shown in Figure 5, the proposed MRTE is composed of two convolution stacks and a downsampling block. To reduce the computational requirements while maintaining the quality of timbre reconstruction, we downsample the timbre hidden states by a factor of d = 16 in length. In training, we randomly sample 2,000 frames from ˜y for training efficiency.
 VQ Encoder The bottleneck of our VQ Encoder is composed of a max pooling layer with a stride of 8 and a vector quantised layer. In our experiments, we found that compressing the mel-spectrograms with a compression rate of r = 8 yields superior results compared to phoneme-level compression. We have tried different compression rates (2, 4, 8, 16, 32) and found that r = 8 reached an optimal balance between the reconstruction performance and compression. On the other hand, in the training process, we also found that the vanilla VQ-VAE suffers from codebook collapse (Takida et al., 2022), which means only a small portion of codebook vectors are optimized. It restricts the expressive capacity of the codebook and affects the convergence of the training process. To solve the codebook collapse issue, we adopt a dynamical initialization strategy based on CVQ-VAE (Zheng & Vedaldi, 2023) during training, which ensures the code vectors that are less-used or unused to be modified more than frequently used ones.
 
-#### A.4.MODEL CONFIGURATION
+#### A.4·MODEL CONFIGURATION
 
 Our ***Mega-TTS 2*** consists of three encoders, a prosody latent language model, a mel decoder, and a discriminator. The prosody encoder, timbre encoder, and decoder consist of 5 convolutional blocks with 512 hidden size and 5 kernel size. The content encoder is an 8-layer Transformer (Vaswani et al., 2017; Shen et al., 2023a) with 512 hidden size. The GAN discriminator follows the architecture of ML-GAN proposed in Chen et al. (2020). The P-LLM model is a decoder-only architecture that contains 12 Transformer layers with 1024 hidden size, which has 151M parameters. The duration predictor is an 8-layer decoder-only Transformer model with 512 hidden size. The codebook embedding size is 1024, and the hidden size of the codebook vector is 256. The compression rate r and d is set as 8 and 16, respectively. For prosody transfer experiments, γ is set as 0.8. We provide detailed hyper-parameter settings about the model configuration in Table 5.
 
-#### A.5.ERROR BARS AND RANDOM SEEDS
+#### A.5·ERROR BARS AND RANDOM SEEDS
 
 For the subjective evaluations, we report confidence intervals of the results of MOS tests. For the objective evaluations, we ran the experiments 10 times with 10 different random seeds ([1234, 1111, 2222, 3333, 4444, 5555, 6666, 7777, 8888, 9999]) and obtained the averaged results.
 
