--- a/Models/SpeechLM/2023.10.04_UniverSLU.md
+++ b/Models/SpeechLM/2023.10.04_UniverSLU.md
@@ -27,7 +27,7 @@
 
 ## Abstract: 摘要
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
 Recent studies leverage large language models with multi-tasking capabilities, using natural language prompts to guide the model's behavior and surpassing performance of task-specific models.
 Motivated by this, we ask: can we build a single model that jointly performs various spoken language understanding (SLU) tasks? We start by adapting a pre-trained automatic speech recognition model to additional tasks using single-token task specifiers.
@@ -37,12 +37,12 @@ We demonstrate the efficacy of our single multi-task learning model "***UniverSL
 On most tasks, ***UniverSLU*** achieves competitive performance and often even surpasses task-specific models.
 Additionally, we assess the zero-shot capabilities, finding that the model generalizes to new datasets and languages for seen task types.
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
