--- a/Models/SpeechLM/2023.09.11_NExT-GPT.md
+++ b/Models/SpeechLM/2023.09.11_NExT-GPT.md
@@ -32,14 +32,14 @@ Moreover, we introduce a modality-switching instruction tuning (MosIT) and manua
 Overall, our research showcases the promising possibility of building an AI agent capable of modeling universal modalities, paving the way for more human-like AI research in the community.
 Project page: this https URL
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
