--- a/Models/SpeechLM/2023.10.07_LauraGPT.md
+++ b/Models/SpeechLM/2023.10.07_LauraGPT.md
@@ -42,7 +42,7 @@ We propose a one-step codec vocoder to overcome the prediction challenge caused 
 We fine-tune ***LauraGPT*** using supervised multi-task learning.
 Extensive experiments show that ***LauraGPT*** consistently achieves comparable to superior performance compared to strong baselines on a wide range of audio tasks related to content, semantics, paralinguistics, and audio-signal analysis, such as automatic speech recognition, speech-to-text translation, text-to-speech synthesis, speech enhancement, automated audio captioning, speech emotion recognition, and spoken language understanding.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
 Large language models (LLMs) are neural networks that generate natural language texts based on a given context.
 LLMs can learn from massive amounts of text data and mimic human language to acquire human knowledge.
@@ -82,7 +82,7 @@ Comprehensive experiments show that, to the best of our knowledge, ***LauraGPT**
 Demos  are available at https://lauragpt.github.io.
 The results are remarkable since existing general speech models either focus solely on speech recognition and understanding tasks but neglect speech generative tasks, or support speech generation but suffer from severe performance degradation on speech recognition and understanding tasks.
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
 ### Audio-to-Text LLMs
 
@@ -114,7 +114,7 @@ The second direction uses LLMs as the backbone for a unified model that handles 
 SpeechT5~\citep{DBLP:conf/acl/AoWZ0RW0KLZWQ0W22} and SpeechNet~\citep{DBLP:journals/corr/abs-2105-03070} perform various speech tasks with an encoder-decoder model, but they require modal-specific pre-nets and post-nets to deal with different input\&output modalities.
 VioLA~\citep{DBLP:journals/corr/abs-2305-16107}, AudioPaLM~\citep{DBLP:journals/corr/abs-2306-12925}, SpeechGPT~\citep{DBLP:journals/corr/abs-2305-11000}, and SpeechGen~\citep{DBLP:journals/corr/abs-2306-02207} use decoder-only Transformers to model discrete audio tokens and text tokens as a shared vocabulary, but they suffer from information loss from quantization of audio signals into discrete tokens~\citep{DBLP:journals/corr/abs-2311-04534,DBLP:journals/corr/abs-2305-18108,DBLP:journals/corr/abs-2309-07377,DBLP:journals/corr/abs-2309-10922}.
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
 Figure~\ref{fig:overall} depicts the architecture of the proposed ***LauraGPT***.
 Section \ref{sec:gpt-backbone} describes the audio encoder, the text tokenizer, and the modified GPT LM for unified audio-and-text modeling.
@@ -122,7 +122,7 @@ Section~\ref{sec:audio-tokenizer} elaborates the audio tokenizer.
 Section~\ref{sec:codec_vocoder} introduces an efficient one-step codec vocoder for converting audio tokens into high-quality raw waveforms.
 Section~\ref{sec:task-details} describes the multi-task fine-tuning and shows that ***LauraGPT*** provides an extensible framework for supporting more complex tasks.
 
-### 3.1.Modified Language Model for Unifying Audio-and-Text Modeling
+### 3.1·Modified Language Model for Unifying Audio-and-Text Modeling
 
 For audio inputs, different from other audio-and-text LLMs using discrete tokens to represent audio inputs, we extract the log-compressed Mel spectrogram features and convert them into continuous representations using a Conformer-based audio encoder.
 Text inputs and outputs are tokenized using the Qwen tokenizer \cite{qwen}, which inherits the tiktoken tokenizer~\citep{tiktoken} and incorporates additional augmentations for commonly used characters and words in different languages.
@@ -155,7 +155,7 @@ Qwen is pre-trained on a diverse corpus covering various domains in English and 
 Compared with other open-source GPT models with similar model sizes, Qwen models demonstrate impressive competitiveness, achieving better performance on widely used benchmarks, especially on Chinese tasks~\citep{qwen}.
 Within ***LauraGPT***, all parameters including the Qwen backbone are jointly optimized, except for the codec vocoder, which is trained independently and kept frozen during both training and inference stages of ***LauraGPT***.
 
-### 3.2.Audio tokenizer
+### 3.2·Audio tokenizer
 
 For audio generation, we utilize a codec model as the audio tokenizer to extract discrete representations.
 Our codec model shares a similar architecture as EnCodec~\citep{defossez2022highfi}, which comprises convolutional recurrent encoder and decoder~\citep{DBLP:conf/interspeech/TagliasacchiLMR20} and a residual vector quantizer (RVQ)~\citep{vasuki2006review}.
@@ -169,7 +169,7 @@ The choice of the first $N$ RVQ quantizers to use is a tradeoff between performa
 The remaining quantizers and the decoder are only used when training the codec model.
 Details of training and the pre-trained codec model are in ~\cite{du2023funcodec}.
 
-### 3.3.One-step Codec Vocoder for Audio Generation
+### 3.3·One-step Codec Vocoder for Audio Generation
 
 We propose a one-step codec vocoder in ***LauraGPT*** to generate waveforms from the audio tokens, which are extracted from the first quantizer as described in Section~\ref{sec:audio-tokenizer}.
 Our vocoder comprises two components: a transformer-based predictor and a codec decoder.
@@ -188,7 +188,7 @@ For SE task, the input noisy speech features are employed as conditions.
 Such text and audio conditionings allow the model to generate high-quality audio signals by leveraging the diverse information in prompt audios and noisy speeches, which is lacked in the discrete tokens (output from the first quantizer).
 Therefore, different from existing Text-to-Audio LLMs, **our approach simplifies the audio generation process to a single feed-forward calculation and overcomes the prediction challenge caused by the multi-modal distribution of codec tokens**.
 
-### 3.4.Multi-task Finetuning
+### 3.4·Multi-task Finetuning
 
 #### Basic Tasks
 
@@ -218,7 +218,7 @@ This approach treats the bilingual text as the complete input and allows the mod
 Audio samples of S2ST can be found on the demo site.
 More examples of complex tasks are in Appendix~\ref{appendix:more-complex-tasks}.
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
 ### Model Architecture
 
@@ -236,13 +236,13 @@ We then optimize the model parameters through multi-task fine-tuning.
 The training\&test datasets and evaluation metrics are presented in Appendix~\ref{sec:training-datasets} and ~\ref{sec:evaldata-metrics}.
 Appendix~\ref{sec:detail_training_setup} describes the three-stage training process to address the significant variation in data volume across different tasks, and details the inference process.
 
-## 5.Results: 结果
+## 5·Results: 结果
 
 Section~\ref{sec:experiments} presents the main results of performance comparison on the basic tasks from the state-of-the-art (SOTA) model, a **comparable** baseline, and our ***LauraGPT***.
 Ablation studies in Section~\ref{sec:analysis} demonstrate the advantages of using continuous representations for audio inputs in ***LauraGPT*** by comparing to a counterpart with both discrete inputs and outputs (denoted **Discrete IO**), the superiority of our one-step codec vocoder, and effectiveness of multi-task finetuning.
 Further analyses include comparison with related unified Audio-and-Text LLMs~(Appendix~\ref{appendix:comparison-other-text-audio-model}), more analysis of multi-task fine-tuning on SER task~(Appendix~\ref{ser-impact-of-multi-task-finetuning}), comparing batch normalization with layer normalization in the audio encoder~(Appendix~\ref{sec:normlization}), and studying impact of initialization from pre-trained models~(Appendix~\ref{sec:init-gpt}).
 
-### 5.1.Results on All Tasks
+### 5.1·Results on All Tasks
 
 Table~\ref{tab:overall_res} shows the results from the SOTA model, a comparable baseline, and our ***LauraGPT***, in that order, on a variety of speech recognition, understanding, and generation benchmarks.
 Our results are from single runs due to the stability of the models and limited computational resources.
@@ -262,7 +262,7 @@ Compared to both VALL-E models, ***LauraGPT*** achieves comparable speaker simil
 The degradation in content consistency (WER) from ***LauraGPT*** results from the generalization issue, since the training data is too limited for ***LauraGPT*** with 2B parameters.
 Overall, the results show that ***LauraGPT*** consistently achieves comparable to superior performance than strong baselines on diverse speech tasks, demonstrating the general effectiveness of ***LauraGPT*** on speech recognition, understanding, and generative tasks**.
 
-### 5.2.Analysis
+### 5.2·Analysis
 
 #### Discrete VS.
 Continuous Representations for Audio Inputs
@@ -301,13 +301,13 @@ The results are shown in Table~\ref{tab:single-multi-compare}.
 More analyses in Appendix~\ref{ser-impact-of-multi-task-finetuning} show that multi-task learning dramatically improves accuracies of the minority classes.
 **In summary, these results verify that multi-task learning for ***LauraGPT*** consistently achieves better performance than single-task training for tasks with limited training data.**
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
 
 We propose ***LauraGPT*** that can handle both audio and text inputs and outputs and perform audio recognition, understanding, and generation.
 We propose combining continuous and discrete features for audio and a one-step codec vocoder, and employ multi-task learning.
 Experiments demonstrate that ***LauraGPT*** achieves comparable to superior performance compared to strong baselines on a wide range of speech tasks on content, semantics, paralinguistics, and audio-signal analysis.
 
-## 7.Limitations: 局限性
+## 7·Limitations: 局限性
 
 In this work, in order to support a wide range of audio recognition, understanding, and generation tasks, we choose to train all parameters in ***LauraGPT*** during supervised multi-task finetuning, including the Qwen backbone, except for the codec vocoder.
 This strategy results in substantial computations for training.
