--- a/Models/SpeechLM/2023.11.14_Qwen-Audio.md
+++ b/Models/SpeechLM/2023.11.14_Qwen-Audio.md
@@ -35,14 +35,14 @@ To overcome the one-to-many interference, we carefully design a multi-task train
 Remarkably, ***Qwen-Audio*** achieves impressive performance across diverse benchmark tasks without requiring any task-specific fine-tuning, surpassing its counterparts.
 Building upon the capabilities of ***Qwen-Audio***, we further develop ***Qwen-Audio-Chat***, which allows for input from various audios and text inputs, enabling multi-turn dialogues and supporting various audio-central scenarios.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
